test/sema/typeck/trait/impl-method-where-clause-missing.out
error: missing bound `Foo` on type parameter `T`.
--> impl-method-where-clause-missing.dora:10:5
 | 
 | impl Bar for MyClass {
 |     fn baz[T]() {}
       ~~~~~~~~~~~~~~
 | }
 | 
1 error found.
