test/sema/typeck/trait/impl-method-where-clause-missing.dora
trait Foo {}

trait Bar {
    fn baz[T]() where T: Foo;
}

class MyClass

impl Bar for MyClass {
    fn baz[T]() {}
}
